--- a/llm_planning_analysis/requirements.txt
+++ b/llm_planning_analysis/requirements.txt
@@ -1,6 +1,12 @@
-numpy==1.19.5
+numpy
 openai
-PyYAML==6.0
+PyYAML
 tarski==0.7.0
-transformers==4.22.2
-pddl==0.2.0
+transformers
+pddl
+boto3
+anthropic
+rich
+google-genai
+openai
+vertexai
